--- a/style/blog.css
+++ b/style/blog.css
@@ -245,6 +245,65 @@ left: 230px;
 
 
 /* section 4 */
+.section-4{
+    background-color: rgba(64, 64, 64, 0.315);
+}
+.section-4-div h1{
+    padding-top: 100px;
+    text-align: center;
+    font-size: 85px;
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+}
+/* section-4-div-h1 end */
+.section-4-div-1{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    /* padding-bottom: 100px; */
+}
+.section-4-card-1 div{
+    margin: 0 auto;
+    align-items: center;
+    font-size: 30px;
+    background-color: chartreuse;
+    text-align: center;
+    width: 50px;
+    height:40px;
+    border-radius: 50%;
+    padding-top: 10px;
+}
+.section-4-card-1{
+    width: 356px;
+    height: 295px;
+    background: rgba(0, 0, 0, 0.048);
+    text-align: center;
+    padding: 30px;
+    border-radius: 8px;
+}
+.section-4-card-1:hover{
+    border: 2px solid black;
+}
+
+.section-4-card-1 h1{
+    font-size: 30px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    padding-top:25px ;
+}
+.section-4-card-1 p{
+    font-size: 21px;
+    font-weight: 400;
+    padding-top: 15px;
+}
+/* .section-4-div-2{
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding-bottom: 100px;
+} */
 
 
 
@@ -372,7 +431,7 @@ display: none;
     text-align: center;
 }
 
-
+/* akto kaj baki */
 /* section 3 */
 .section-3{
     margin: 100px auto;
@@ -422,8 +481,57 @@ display: none;
     display: none;
 }
 
-
+/* akto kaj baki */
 /* section 4 */
+.section-4-div h1{
+    padding-top: 100px;
+    text-align: center;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+}
+  /* section-4-div-1 end */
+  .section-4-div-1{
+    margin-top: 100px;
+    flex-direction: column;
+    padding-bottom: 20px;
+    
+}
 
-  
+
+.section-4-card-1 div{
+    margin: 0 auto;
+    align-items: center;
+    font-size: 30px;
+    background-color: chartreuse;
+    text-align: center;
+    width: 50px;
+    height:40px;
+    border-radius: 50%;
+    padding-top: 10px;
+}
+.section-4-card-1{
+    margin: 0 auto;
+    width: 300px;
+    height: 250px;
+    background: rgba(0, 0, 0, 0.048);
+    text-align: center;
+    padding: 30px;
+    border-radius: 8px;
+}
+.section-4-card-1:hover{
+    border: 2px solid black;
+}
+
+.section-4-card-1 h1{
+    font-size: 21px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    
+}
+.section-4-card-1 p{
+    font-size: 21px;
+    font-weight: 400;
+   
+}
 }
