--- a/style/blog.css
+++ b/style/blog.css
@@ -261,7 +261,7 @@ left: 230px;
     display: flex;
     justify-content: center;
     gap: 30px;
-    /* padding-bottom: 100px; */
+    padding-bottom: 100px;
 }
 .section-4-card-1 div{
     margin: 0 auto;
@@ -297,13 +297,27 @@ left: 230px;
     font-weight: 400;
     padding-top: 15px;
 }
-/* .section-4-div-2{
-    padding-top: 30px;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    padding-bottom: 100px;
-} */
+
+
+/* section-5 */
+.button{
+    border: none;
+    background-color: blue;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 3px;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+}
+.section-2-div-3 div{
+    padding-top: 20px;
+}
+
+/* section-6 */
+
 
 
 
@@ -533,5 +547,16 @@ display: none;
     font-size: 21px;
     font-weight: 400;
    
+}
+/* section-5 */
+
+
+
+
+
+/* section-6 */
+.section-6{
+    background-color: rgba(64, 64, 64, 0.685);
+    padding-top: 100px;
 }
 }
