--- a/style/blog.css
+++ b/style/blog.css
@@ -246,7 +246,7 @@ left: 230px;
 
 /* section 4 */
 .section-4{
-    background-color: rgba(64, 64, 64, 0.315);
+    background-color: rgba(64, 64, 64, 0.082);
 }
 .section-4-div h1{
     padding-top: 100px;
@@ -317,6 +317,88 @@ left: 230px;
 }
 
 /* section-6 */
+.section-6{
+    background-color: rgba(64, 64, 64, 0.034);
+}
+.section-6-div h1{
+    text-align: center;
+    font-size: 85px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+}
+.section-6-div{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+/* section-6-div end */
+ 
+
+/* section-6-div-1 start*/
+.section-6-div-1{
+    padding-top: 100px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+
+}
+.section-6-div-2{
+    width: 624px;
+    height: 326px;
+    border: 2px solid black;
+    border-radius: 8px;
+}
+.icon{
+    padding-left: px;
+    width: 30px;
+    height: 30px;
+    color: chartreuse;
+    margin-bottom: 20px;
+}
+.section-6-div-3{
+    padding: 24px;
+}
+.section-6-div-3 h1{
+    font-size: 24px;
+    font-weight: 700;
+    color: rgb(12, 12, 12);
+    margin-bottom: 12px;
+}
+.section-6-div-3 p{
+    font-size: 21px;
+    font-weight: 400;
+    color: rgb(12, 12, 12);
+    margin-bottom: 30px;
+}
+
+.section-6-div-4 img{
+    border-radius: 50%;
+}
+.section-6-div-6{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.section-6-div-5 h4{
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(12, 12, 12);
+}
+
+.section-6-div-5 .p{
+    
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(102, 102, 102);
+}
+
+/* section-6-div-2 start*/
+.section-6-div-1{
+    padding-top:20px ;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
 
 
 
@@ -404,7 +486,6 @@ left: 230px;
     flex: none;
 }
 .section-2{
-    
     margin: 100px auto;
     background-position:top left ;
     /* margin-top: 200px; */
@@ -554,9 +635,48 @@ display: none;
 
 
 
+
 /* section-6 */
 .section-6{
-    background-color: rgba(64, 64, 64, 0.685);
-    padding-top: 100px;
+    background-color: rgba(64, 64, 64, 0.034);
+   
 }
+.section-6-div h1{
+    font-size: 30px;
+}
+
+
+ 
+
+/* section-6-div-1 start*/
+.section-6-div-1{
+    padding-top: 100px;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0 auto;
+
+}
+.section-6-div-2{
+    margin: 0 auto;
+    width: 338px;
+    height: 370px;
+    border: 2px solid black;
+    border-radius: 8px;
+}
+.icon{
+    width: 30px;
+    height: 30px;
+    color: chartreuse;
+    margin-bottom: 20px;
+}
+
+
+.section-6-div-3 p{
+    font-size: 18px;
+}
+.section-6-div-5 h4{
+    font-size: 18px;
+}
+
+
 }
