--- a/style/blog.css
+++ b/style/blog.css
@@ -1060,8 +1060,7 @@ footer{
     
 }
 .footer-button{
-    padding: 13px 
-    65px;
+    padding: 13px 65px;
     border: none;
     color: #fff;
     background-color: #2332DD;
